# correlations

./: .pre-commit-config.yaml  pyproject.toml  setup.cfg  setup.py
correlations/: __init__.py  angular_correlation.py  angular_utils.py  compute_correlations.f90  correlation_functions.py  correlations.py  data.h5  draw_on_circle.py  fortran_compute_correlations.f90  fortran_utils.py  funcs.py  quadpack.f90  test_correlation_functions.py  test_correlations.py  test_utils.py  utils.c  utils.h  utils.html  utils.pxd  utils.py  utils.pyx  utils_api.h
correlations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
correlations/.ipynb_checkpoints/: testing Fortran integrator-checkpoint.ipynb
test_fortran/: Makefile  test.f90  test.py  utils.f90
