[build-system]
requires = [
  "setuptools>=19.6",
  # see https://github.com/numpy/numpy/pull/18389
  "wheel>=0.36.2",

  # Cython 3.0 is the next version after 0.29, and a major change,
  # we forbid it until we can properly test against it
  "Cython>=0.29.21,<3.0",
  "oldest-supported-numpy",
]


[tool.isort]
profile = "black"
combine_as_imports = true
skip =  ["venv", "benchmarks"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]


[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "C", "F", "UP", "B", "A", "YTT", "S", "N"]
ignore = ["N802", "N806", "N803", "N816", "C901", "UP007"]
target-version = 'py38'

[tool.ruff.per-file-ignores]
"**/test*.py" = ["S101"]

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["labellines"]
known-third-party = [
  "numpy",
  "matplotlib",
]
