[metadata]
name = correlations
version = 0.0.2
description = Compute correlations functions for Gaussian Random Fields.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cphyc/correlations
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Mathematics
authors = Corentin Cadiou <contact@cphyc.me>

[options]
packages = find:
py_modules = correlations
python_requires = >=3.8
include_package_data = True
install_requires =
    numpy
    mezmorize
    shove

[options.package_data]
* = *.pyx *.py data/power.dat

[bdist_wheel]
universal = True

[flake8]
max-line-length = 88
ignore = E203, # Whitespace before ':' (black compat)
    W503, # Line break before binary operator (black compat)
    E731, # Do not assign a lambda expression

[tool:pytest]
testpaths =
    tests
